--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="/photo_icons/Сашко.jpg" alt="Сашко">
+                <img src="photo_icons/Сашко.jpg" alt="Сашко">
             </div>
         </div>
     </section>
@@ -50,7 +50,7 @@
     <section id="about" class="about">
         <div class="container">
             <div class="about-image">
-                <img src="/photo_icons/Сашко2.jpg" alt="Сашко фото">
+                <img src="photo_icons/Сашко2.jpg" alt="Сашко фото">
             </div>
             <div class="text"><h2>Цікаво про мене? Ось що я маю:</h2>
                 <p>Я палкий та цілеспрямований backend розробник, який спеціалізується на створенні чудових веб-сайтів. Маю великий досвід роботи з цифровими продуктами, орієнтований на користувацький досвід та естетично привабливий дизайн.</p>
@@ -67,15 +67,15 @@
             <h2>Програми та технології, з якими я добре знайомий:</h2>
             <div class="skills-list">
                 <div class="skill">
-                    <img src="/photo_icons/icon-javscript.svg" alt="JavaScript">
+                    <img src="photo_icons/icon-javscript.svg" alt="JavaScript">
                     <span>JavaScript</span>
                 </div>
                 <div class="skill">
-                    <img src="/photo_icons/icon-figma.svg" alt="Figma">
+                    <img src="photo_icons/icon-figma.svg" alt="Figma">
                     <span>Figma</span>
                 </div>
                 <div class="skill">
-                    <img src="/photo_icons/icon-git.svg" alt="Git">
+                    <img src="photo_icons/icon-git.svg" alt="Git">
                     <span>Git</span>
                 </div>
             </div>
@@ -119,17 +119,17 @@
             <h2>Приємні слова, які люди говорили про мене:</h2>
             <div class="testimonials-list">
                 <div class="testimonial-card">
-                    <img src="/photo_icons/2.jpg" alt="Джон Доу">
+                    <img src="photo_icons/2.jpg" alt="Джон Доу">
                     <p>"Сашко - дуже талановитий та працьовитий розробник. Він дуже добре розуміється на бекенд розробці, і його вміння будуть великим плюсом для будь-якої команди."</p>
                     <p class="author">Джон Доу, Засновник</p>
                 </div>
                 <div class="testimonial-card">
-                    <img src="/photo_icons/1.jpg" alt="Джейн Сміт">
+                    <img src="photo_icons/1.jpg" alt="Джейн Сміт">
                     <p>"Я був надзвичайно вражений його здатністю швидко розуміти складні завдання та знаходити ефективні рішення. Він дуже цінує командну роботу та завжди готовий допомогти."</p>
                     <p class="author">Джейн Сміт, Керівник проекту</p>
                 </div>
                 <div class="testimonial-card">
-                    <img src="/photo_icons/3.jpg" alt="Пітер Джонс">
+                    <img src="photo_icons/3.jpg" alt="Пітер Джонс">
                     <p>"Сашко - винятковий розробник. Його увага до деталей та прагнення до якості заслуговують на похвалу. Він швидко адаптується до нових технологій та завжди прагне до найкращих результатів."</p>
                     <p class="author">Пітер Джонс, Технічний директор</p>
                 </div>
@@ -145,9 +145,9 @@
                 <p><a href="tel:+380660286806">+380660286806</a></p>
             </div>
             <div class="social">
-                <div><a href="https://www.instagram.com/sasha.faraonn/"><img src="/photo_icons/icons8-instagram.svg" alt="Instagram"></a></div>
-                <div><a href="https://github.com/San4ez-edu"><img src="/photo_icons/git.svg" alt="github"></a></div>
-                <div><a href="#"><img src="/photo_icons/figma.svg" alt="figma"></a></div>
+                <div><a href="https://www.instagram.com/sasha.faraonn/"><img src="photo_icons/icons8-instagram.svg" alt="Instagram"></a></div>
+                <div><a href="https://github.com/San4ez-edu"><img src="photo_icons/git.svg" alt="github"></a></div>
+                <div><a href="#"><img src="photo_icons/figma.svg" alt="figma"></a></div>
             </div>
         </div>
     </section>
@@ -158,6 +158,6 @@
         </div>
     </footer>
 
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
