--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <h1>Привіт, я Сашко</h1>
                 <p class="subtitle">Backend розробник з невеликим досвідом у створенні веб-сайтів та додатків. Захоплений розробкою та постійно навчаюсь новому.</p>
                 <div class="social-links">
-                    <p><a href="https://www.google.com/maps/place/%D0%9C%D1%83%D0%BA%D0%B0%D1%87%D0%B5%D0%B2%D0%BE,+%D0%97%D0%B0%D0%BA%D0%B0%D1%80%D0%BF%D0%B0%D1%82%D1%81%D1%8C%D0%BA%D0%B0+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C,+89600/@48.4408727,22.6303155,12z/data=!3m1!4b1!4m6!3m5!1s0x4739ac78bafa8c3f:0x2da00d5a792c2aa!8m2!3d48.4493055!4d22.7117106!16zL20vMDJfYnYz?entry=ttu&g_ep=EgoyMDI1MDUyMS4wIKXMDSoASAFQAw%3D%3D"><img src="/photo_icons/Location.svg.svg" alt="location">Мукачево, Закарпаття, Україна</a></h1>
-                    <p><a href="#"><img src="/photo_icons/icon-dot-emerald-500.svg" alt=".">Приймаю нові замовлення</a></hi>
+                    <p><a href="https://www.google.com/maps/place/%D0%9C%D1%83%D0%BA%D0%B0%D1%87%D0%B5%D0%B2%D0%BE,+%D0%97%D0%B0%D0%BA%D0%B0%D1%80%D0%BF%D0%B0%D1%82%D1%81%D1%8C%D0%BA%D0%B0+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C,+89600/@48.4408727,22.6303155,12z/data=!3m1!4b1!4m6!3m5!1s0x4739ac78bafa8c3f:0x2da00d5a792c2aa!8m2!3d48.4493055!4d22.7117106!16zL20vMDJfYnYz?entry=ttu&g_ep=EgoyMDI1MDUyMS4wIKXMDSoASAFQAw%3D%3D"><img src="photo_icons/Location.svg.svg" alt="location">Мукачево, Закарпаття, Україна</a></h1>
+                    <p><a href="#"><img src="photo_icons/icon-dot-emerald-500.svg" alt=".">Приймаю нові замовлення</a></hi>
                 </div>
             </div>
             <div class="hero-image">
