--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <h2>Деякі з моїх помітних проектів, над якими я працював:</h2>
             <div class="projects-list">
                 <div class="project-card">
-                    <img src="assets/project1.jpg" alt="Проект 1">
+                    <img src="photo_icons/11" alt="Проект 1">
                     <h3>Fiskil</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
                     <div class="project-links">
@@ -95,7 +95,7 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="assets/project2.jpg" alt="Проект 2">
+                    <img src="photo_icons/22" alt="Проект 2">
                     <h3>Fiskil</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
                     <div class="project-links">
@@ -103,7 +103,7 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="assets/project3.jpg" alt="Проект 3">
+                    <img src="photo_icons/33" alt="Проект 3">
                     <h3>Fiskil</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
                     <div class="project-links">
