--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="uk">
 <head>
@@ -88,24 +89,24 @@
             <div class="projects-list">
                 <div class="project-card">
                     <img src="photo_icons/11.jpg" alt="Проект 1">
-                    <h3>Fiskil</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+                    <h3>ACME</h3>
+                    <p>Сайт завдяки якому вивчав основи HTML CSS та добре засвоїв їх в подальшій роботі.</p>
                     <div class="project-links">
                         <a href="#">Переглянути проект</a>
                     </div>
                 </div>
                 <div class="project-card">
                     <img src="photo_icons/22.jpg" alt="Проект 2">
-                    <h3>Fiskil</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+                    <h3>Window</h3>
+                    <p>Приклад того як можна викоритовувати різні елементи для побудови реєстраційного вікна.</p>
                     <div class="project-links">
                         <a href="#">Переглянути проект</a>
                     </div>
                 </div>
                 <div class="project-card">
                     <img src="photo_icons/33.jpg" alt="Проект 3">
-                    <h3>Fiskil</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+                    <h3>Calculator</h3>
+                    <p>Перший та далеко не останній проект з активним використанням js та html css.</p>
                     <div class="project-links">
                         <a href="#">Переглянути проект</a>
                     </div>
